--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -3,6 +3,8 @@
 # value of 3.4.0 or lower.
 
 cmake_minimum_required(VERSION 3.4.1)
+# 设置生成的so动态库最后输出的路径
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/src/main/jniLibs/${ANDROID_ABI})
 
 # Creates and names a library, sets it as either STATIC
 # or SHARED, and provides the relative paths to its source code.
@@ -11,15 +13,12 @@ cmake_minimum_required(VERSION 3.4.1)
 
 add_library( # Sets the name of the library.
              native-lib
-
              # Sets the library as a shared library.
              SHARED
-
              # Provides a relative path to your source file(s).
              # Associated headers in the same location as their source
              # file are automatically included.
              src/main/cpp/native-lib.cpp )
-
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because system libraries are included in the search path by
@@ -29,7 +28,6 @@ add_library( # Sets the name of the library.
 
 find_library( # Sets the name of the path variable.
               log-lib
-
               # Specifies the name of the NDK library that
               # you want CMake to locate.
               log )
@@ -40,11 +38,13 @@ find_library( # Sets the name of the path variable.
 
 target_link_libraries( # Specifies the target library.
                        native-lib
-
                        # Links the target library to the log library
                        # included in the NDK.
                        ${log-lib} )
 
+
+
+# ndkgl
 
 add_library(opengl-lib
             SHARED
@@ -56,3 +56,4 @@ find_library( GLESv2-lib
 target_link_libraries( opengl-lib
                        ${GLESv2-lib}
                        ${log-lib} )
+
