--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/grafika"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -23,7 +23,7 @@
         </activity>
 
         <activity android:name="org.learn.test.grafika.PlayMovieActivity"
-                  android:label="@string/title_activity_play_movie" />
+                  android:label="@string/title_activity_play_movie"/>
 
 
 
