Grafika Continuous Capture (SurfaceView)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
         <activity android:name="org.learn.test.grafika.PlayMovieActivity"
                   android:label="@string/title_activity_play_movie"/>
 
+        <activity android:name="org.learn.test.grafika.ContinuousCaptureActivity"
+                  android:label="@string/title_activity_continuous_capture"/>
+
 
 
         <activity android:name="org.learn.test.ndkgl.NDKGLActivity"/>
