--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <activity android:name="org.learn.test.ndkgl.NDKGLActivity"/>
+
+        <activity android:name="org.learn.test.mediadump.RgbPlayerActivity"/>
+        <activity android:name="org.learn.test.mediadump.VideoDumpActivity"/>
+
+
+
         <activity android:name="org.learn.test.grafika.GrafikaMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -24,15 +32,13 @@
 
         <activity android:name="org.learn.test.grafika.PlayMovieActivity"
                   android:label="@string/title_activity_play_movie"/>
-
         <activity android:name="org.learn.test.grafika.ContinuousCaptureActivity"
                   android:label="@string/title_activity_continuous_capture"/>
+        <activity android:name="org.learn.test.grafika.DoubleDecodeActivity"
+                  android:label="@string/title_activity_double_decode"
+                  android:screenOrientation="sensor"/>
 
 
-
-        <activity android:name="org.learn.test.ndkgl.NDKGLActivity"/>
-        <activity android:name="org.learn.test.mediadump.RgbPlayerActivity"/>
-        <activity android:name="org.learn.test.mediadump.VideoDumpActivity"/>
     </application>
 
 
