--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
 
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
 
@@ -41,6 +42,10 @@
                   android:label="@string/title_activity_hardware_scaler"/>
         <activity android:name="org.learn.test.grafika.TextureViewGLActivity"
                   android:label="@string/title_activity_textureview_gl"/>
+        <activity android:name="org.learn.test.grafika.LiveCameraActivity"
+                  android:label="@string/title_activity_live_camera" />
+        <activity android:name="org.learn.test.grafika.CameraRecordActivity"
+                  android:label="@string/title_activity_camera_capture" />
     </application>
 
 
